# Biological-Molecular-Interaction-Intelligence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  data_after_phase1.md  data_after_phase2.md  data_model.md  database_schema.md  migration.md  production.md  security.md  testing.md  transformers_huggingface.md  xgboost_numeric_model.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/database/: main.tf
infra/modules/ecr/: main.tf
infra/modules/ecs/: main.tf
infra/modules/networking/: main.tf
infra/modules/secrets/: main.tf
infra/modules/storage/: main.tf
migrations/: env.py
migrations/versions/: 5dfa55165ac4_production_schema.py
src/: config.py  logging_config.py  main.py  metrics.py  middleware.py  tracing.py
src/db/: database.py  models.py
src/features/: interfaces.py  manager.py  morgan.py  protein_embeddings.py  store.py
src/inference/: schemas.py  service.py  similarity.py
src/ingestion/: interfaces.py  manager.py  parsers.py  sources.py  storage.py  storage_interface.py
src/models/: __main__.py  evaluator.py  interfaces.py  scoring.py  trainer.py  training_data.py  xgboost_model.py
tests/: conftest.py  test_api.py  test_evaluator.py  test_feature_store.py  test_featurization_integration.py  test_featurization_manager.py  test_inference_service.py  test_ingestion_integration.py  test_middleware.py  test_morgan.py  test_protein_embeddings.py  test_scoring.py  test_similarity.py  test_trainer.py  test_training_data.py  test_xgboost_model.py
